[package]
name = "advent_of_code_2018"
version = "0.1.0"
authors = ["mfrench <mfrench@indeed.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day_1"
path = "src/day_1.rs"

[[bin]]
name = "day_2"
path = "src/day_2.rs"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'